fix: Remove extra space in swiper thumbs div class for consistency

--- a/scss/page/single-hotel.scss
+++ b/scss/page/single-hotel.scss
@@ -113,6 +113,7 @@
 
 .hotel-gallery-thumb-slide {
   border-radius: 8px;
+  height: 100%;
   overflow: hidden;
   // aspect-ratio: 16/9;
   // margin-top: 8px;
